Call ScanQR via IntentIntegrator in MainActivity.java, trying to use ZXing QRScanner via Fragment(support)
Call ScanQR via IntentIntegrator in MainActivity.java, trying to use ZXing QRScanner via Fragment(support)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">QRCodeExample</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="btn_invokeqrscan">btn_invokeQRScan</string>
+    <string name="press_to_scan">Press to Scan</string>
+    <string name="press_to_generate_qr_code">Press to Generate QR Code</string>
 </resources>
